<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sideBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="30dp"
        android:id="@+id/searchButton"
        android:background="@drawable/search"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="30dp"
        android:id="@+id/resetButton"
        android:background="@drawable/reset"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@id/searchButton"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="110dp"
        android:background="@mipmap/music_play"
        app:layout_constraintRight_toLeftOf="@+id/resetButton"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/pause"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="110dp"
        android:background="@mipmap/music_pause"
        app:layout_constraintRight_toLeftOf="@+id/resetButton"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstLetter"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/firstLetter"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_power"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_power"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_place"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_place"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_year"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_year"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_sex"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_sex"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchName"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="150dp"
                    android:completionThreshold="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>