<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="178dp">

        <ImageView
            android:id="@+id/hero_img"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop" />
        <View
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/arrow"
            android:layout_margin="20dp"/>
        <View
            android:id="@+id/call_menu_out"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/search_to_get_left_layout"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/hero_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hero_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical"
        android:id="@+id/detailView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/paper_background"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="性别："
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:id="@+id/hero_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="效忠势力："
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:id="@+id/hero_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

            </LinearLayout>
                <!--生卒-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/hero_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="涉及年份："
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/birth_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="到"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/death_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textSize="18sp"/>
                </LinearLayout>

                <!--古代籍贯-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/placeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="古代籍贯："
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/hero_place"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="250dp"
                android:background="@drawable/paper_background"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/eventText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="人物事迹"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"/>
                <!--相关事迹-->
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/hero_event"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:text="@string/sample"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"/>
                </ScrollView>

            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/editView"
        android:visibility="gone">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/paper_background"
                android:orientation="vertical"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="姓名："
                        android:textSize="18sp"
                        android:layout_marginLeft="20dp"/>
                    <EditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="姓名"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_sex"
                        android:textSize="18sp"
                        android:layout_marginLeft="20dp"/>
                    <RadioGroup
                        android:id="@+id/sexSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="男"
                            android:textSize="18sp"
                            android:checked="true"
                            android:layout_marginLeft="15dp"/>
                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="女"
                            android:textSize="18sp"
                            android:layout_marginLeft="30dp"/>
                    </RadioGroup>
                </LinearLayout>
                <!--主效势力-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="-5dp">
                    <TextView
                        android:id="@+id/power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_power"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/power_spinner"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:dropDownWidth="90dp"/>
                </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:background="@drawable/paper_background"
                android:orientation="vertical"
                android:padding="20dp">

                <!--生卒-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="年份"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/birth_spinner"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:dropDownWidth="100dp"/>
                    <TextView
                        android:id="@+id/line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="到"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/death_spinner"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:dropDownWidth="110dp"/>
                </LinearLayout>
                <!--古代籍贯-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="-4dp">
                    <TextView
                        android:id="@+id/place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="籍贯"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/place_spinner"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:dropDownWidth="70dp"/>
                </LinearLayout>

                <TextView
                android:id="@+id/event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="人物事迹"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"/>
                <!--相关事迹-->
                <EditText
                android:id="@+id/edit_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="请输入事迹"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <ImageButton
                    android:id="@+id/confirm"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/done"
                    android:layout_marginLeft="100dp"/>
                <ImageButton
                    android:id="@+id/cancel"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/clear"
                    android:layout_marginRight="100dp"
                    android:layout_marginLeft="100dp"/>

            </LinearLayout>
    </LinearLayout>
</LinearLayout>